Fix instrumentation for WebFlux with Spring 6.x (#2936)